--- a/index.html
+++ b/index.html
@@ -3,91 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MapMosaic · 世界画布</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <title>Pixel Canvas · 世界像素画布</title>
+    <script src='https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js'></script>
+    <link href='https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css' rel='stylesheet' />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { 
             font-family: 'Inter', sans-serif;
-            background: #0f0f0f;
+            background: #000;
             color: white;
             overflow: hidden;
         }
         #map { 
-            height: 100vh; 
+            position: absolute;
+            top: 0;
+            bottom: 0;
             width: 100%;
-            cursor: crosshair;
         }
         .control-panel {
             position: absolute;
             top: 20px;
             left: 20px;
             z-index: 1000;
-            background: rgba(15, 15, 15, 0.95);
+            background: rgba(0, 0, 0, 0.8);
             backdrop-filter: blur(20px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
             border-radius: 16px;
             padding: 20px;
-            min-width: 200px;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+            min-width: 280px;
         }
         .title {
-            font-size: 18px;
+            font-size: 20px;
             font-weight: 700;
-            margin-bottom: 16px;
+            margin-bottom: 20px;
             display: flex;
             align-items: center;
+            gap: 10px;
+        }
+        .color-grid {
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
             gap: 8px;
+            margin-bottom: 16px;
         }
-        .color-picker {
-            margin: 16px 0;
-        }
-        .color-label {
-            display: block;
-            font-size: 12px;
-            color: #888;
-            margin-bottom: 8px;
-            font-weight: 600;
-        }
-        #colorInput {
-            width: 100%;
-            height: 40px;
-            border: 2px solid rgba(255, 255, 255, 0.2);
+        .color-option {
+            width: 32px;
+            height: 32px;
             border-radius: 8px;
-            background: rgba(255, 255, 255, 0.1);
             cursor: pointer;
+            border: 2px solid transparent;
+            transition: all 0.2s ease;
+        }
+        .color-option:hover {
+            transform: scale(1.1);
+        }
+        .color-option.active {
+            border-color: white;
+            box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.5);
         }
         .stats {
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(255, 255, 255, 0.1);
             border-radius: 8px;
             padding: 12px;
             margin-top: 12px;
         }
         .stat {
             font-size: 12px;
-            color: #888;
+            color: #ccc;
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 4px;
         }
         .stat-value {
             color: white;
             font-weight: 600;
         }
+        .coordinates {
+            position: absolute;
+            bottom: 20px;
+            left: 20px;
+            background: rgba(0, 0, 0, 0.8);
+            padding: 8px 12px;
+            border-radius: 8px;
+            font-size: 12px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+        }
     </style>
 </head>
 <body>
     <div class="control-panel">
-        <div class="title">🎨 MapMosaic</div>
-        <div class="color-picker">
-            <label class="color-label">选择颜色</label>
-            <input type="color" id="colorInput" value="#ff6b6b">
-        </div>
+        <div class="title">🎨 Pixel Canvas</div>
+        <div class="color-grid" id="colorGrid"></div>
         <div class="stats">
             <div class="stat">像素数量: <span class="stat-value" id="pixelCount">0</span></div>
+            <div class="stat">在线用户: <span class="stat-value" id="onlineUsers">1</span></div>
         </div>
     </div>
+    
+    <div class="coordinates" id="coordinates">坐标: 0, 0</div>
+    
     <div id="map"></div>
 
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
